<resources>
    <string name="app_name">EV Charging</string>
    <string name="bussiness_analytics">Bussiness Analytics</string>
    <string name="select_the_filter_which_you_wnat_to_apply">Select the filter which you dont want to apply</string>
    <string name="amount">Amount</string>
    <string name="energy_sold">Energy Sold</string>
    <string name="user_served">User Served</string>
    <string name="reviews">Reviews</string>
    <string name="ev_stations">EV Stations</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="dont_have_an_account">Dont have an account ?</string>
    <string name="register_now">Register Now</string>
    <string name="your_dashboard">Your Dashboard</string>
    <string name="manage_ev_stations">Manage EV Stations</string>
    <string name="effortlessly_oversee_your_ev_charging_stations_with_ease_and_efficiency">Effortlessly oversee your EV charging stations with ease and efficiency.</string>
    <string name="review_history">Review History</string>
    <string name="track_and_view_your_past_reviews_and_ratings">Track and view your past reviews and ratings.</string>
    <string name="payment_history">Payment History</string>
    <string name="view_your_past_transactions_and_payment_details">View your past transactions and payment details.</string>
    <string name="track_customer_service_metrics_and_revenue_generation">Track customer service metrics and revenue generation</string>
    <string name="manage_your_profile">Manage Your Profile</string>
    <string name="manage_your_personal_information_and_preferences">Manage your personal information and preferences.</string>
    <string name="logout">Logout</string>
    <string name="register_new_naccount">Register New \nAccount</string>
    <string name="name">Name</string>
    <string name="station_name">Station Name</string>
    <string name="charging_points">Charging Points</string>
    <string name="pricing">Pricing</string>
    <string name="select_the_charging_connector_type">Select the charging connector type</string>
    <string name="type_1">Type 1</string>
    <string name="type_2">Type 2</string>
    <string name="type_3">Type 3</string>
    <string name="address">Address</string>
    <string name="register">Register</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="evcharge">EVCharge</string>
    <string name="update_ev_station">Update EV Station</string>
    <string name="please_fill_out_the_form_below_to_nupdate_ev_station_information">Please fill out the form below to \nupdate EV station information</string>
    <string name="energy_kilowatts">Energy (KiloWatts)</string>
    <string name="ex_125_00">ex. 125.00</string>
    <string name="is_this_ev_station_currently_available">Is this EV station currently available?</string>
    <string name="unavailable">Unavailable</string>
    <string name="available">Available</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="update">Update</string>
    <string name="payments">Payments</string>
    <string name="my_balance">MY BALANCE</string>
    <string name="charging_point">Charging Point</string>
    <string name="availble">Availble :</string>
    <string name="energy">Energy :</string>
    <string name="details">Details</string>
    <string name="english">English</string>
    <string name="hindi">Hindi</string>
    <string name="marathi">Marathi</string>
</resources>