<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cl_black"
    android:padding="20dp"
    android:orientation="vertical"
    tools:context=".EnergySold.EnergySoldChartActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:fontFamily="@font/poppins_bold"
        android:text="@string/bussiness_analytics"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="3dp"
        android:textColor="@color/cl_green"
        android:textSize="30sp" />





    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        app:cardCornerRadius="15dp"
        android:layout_height="300dp">
        <com.github.mikephil.charting.charts.LineChart
            android:id="@+id/lcChat"
            android:layout_width="match_parent"
            android:layout_height="300dp"

            android:background="@color/white"
            />
    </androidx.cardview.widget.CardView>


    <TextView
        android:id="@+id/type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/poppins"
        android:singleLine="true"
        android:text="@string/select_the_filter_which_you_wnat_to_apply"

        android:textColor="@color/cl_faint_green"
        android:textSize="12sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp">

        <CheckBox
            android:id="@+id/btnAmount"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:backgroundTint="@color/cl_faint_green"
            android:buttonTint="@color/cl_faint_green"
            android:text="@string/amount"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/btnEnergySold"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/cl_faint_green"
            android:buttonTint="@color/cl_faint_green"

            android:layout_height="48dp"
            android:text="@string/energy_sold"
            android:textColor="@color/white" />

        <CheckBox
            android:id="@+id/btnUserServed"
            android:layout_width="wrap_content"
            android:backgroundTint="@color/cl_faint_green"
            android:buttonTint="@color/cl_faint_green"

            android:layout_height="48dp"
            android:text="@string/user_served"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>