<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/cv"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/cl_faint_green"
    app:cardCornerRadius="10dp"
    android:layout_marginBottom="10dp"
    tools:context=".TempActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical"
            android:padding="15dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="9">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/avatar_img"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/station" />

                    <TextView
                        android:id="@+id/station_name"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_toRightOf="@id/avatar_img"
                        android:fontFamily="@font/poppins"
                        android:maxLines="1"
                        android:paddingLeft="10dp"
                        android:text="@string/charging_point"
                        android:textColor="@color/white"
                        android:textSize="17dp" />

                    <TextView
                        android:id="@+id/tvID"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="gone"/>

                    <TextView
                        android:id="@+id/tvAvailable"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/station_name"
                        android:layout_toRightOf="@id/avatar_img"
                        android:fontFamily="@font/poppins"
                        android:paddingLeft="10dp"
                        android:text="@string/availble"
                        android:textColor="@color/cl_faint_green"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tvEnergy"
                        android:layout_width="200dp"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tvAvailable"
                        android:layout_toRightOf="@id/avatar_img"
                        android:fontFamily="@font/poppins"
                        android:paddingLeft="10dp"
                        android:text="@string/energy"
                        android:textColor="@color/cl_faint_green"
                        android:textSize="12sp" />


                </RelativeLayout>

                <TextView
                    android:id="@+id/details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/gradient"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingHorizontal="10dp"
                    android:text="@string/details"
                    android:textColor="@color/cl_black"
                    android:textSize="15sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">


                <TextView
                    android:id="@+id/tvType"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="5dp"
                    android:background="@drawable/chip"
                    android:fontFamily="@font/poppins_semibold"
                    android:paddingHorizontal="10dp"
                    android:paddingVertical="0dp"
                    android:textColor="@color/cl_black"
                    android:textSize="12sp" />


            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</androidx.cardview.widget.CardView>